// protoc --go_out=. --go-grpc_out=. ./proto/produit.proto 
syntax = "proto3";

package produit;
option go_package="./produit/produitpb";

message Localisation {
    string adresse = 2;
    string ville = 3;
    string cp = 4;
}

message PointRetrait {
    string nom = 1;
    Localisation localisation = 2;
}

message Stock {
    PointRetrait pointRetrait = 1;
    int32 qte = 2;
}

message Photo {
    string url = 1;
}

message Produit {
    string ID = 1;
    string ref = 2;
    string nom = 3;
    string description = 4;
    float prix = 5;
    repeated Photo photos = 6;
    repeated Stock stocks = 7;
    repeated string tags = 8;
}

message ListProduits {
    repeated Produit produits = 1;
}

message ProduitsRequest {
    ListProduits listproduits = 1;
}

message ProduitRequest {
    Produit produit = 1;
}

message GetAllProduitsRequest {}

message ProduitResponse {
    Produit produit = 1;
}

message ProduitsResponse {
    ListProduits listproduits = 1;
}

service ServiceProduit {
    rpc AddProduit (ProduitRequest) returns (Produit);
    rpc UpdateProduits (ProduitsRequest) returns (ProduitsResponse);
    rpc GetAllProduits (GetAllProduitsRequest) returns (ProduitsResponse);
    rpc GetProduitByRef(GetAllProduitsRequest) returns (Produit);
}